syntax = "proto3";

option java_package = "com.elseboot3909.gcrclient";
option java_multiple_files = true;

message ServerData {
  string username = 1;
  bytes password = 2;
  string serverURL = 3;
}

message ServersList {
  repeated ServerData serverData = 1;
}